Fix slides margin on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,3 +29,10 @@
 .slick-dots li.slick-active button:before {
   @apply text-black dark:text-white;
 }
+
+.slick-slide > div {
+  margin: 0 10px;
+}
+.slick-list {
+  margin: 0 -10px;
+}
